[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/ResultScreen/ResultScreen.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[node name="ResultScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Headline" type="Label" parent="."]
margin_left = 1.0
margin_top = -2.0
margin_right = 147.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Result"

[node name="Result1" type="Label" parent="."]
margin_left = 219.0
margin_top = 166.0
margin_right = 741.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 1 )
text = "Result 1"

[node name="Result2" type="Label" parent="."]
margin_left = 219.0
margin_top = 211.0
margin_right = 741.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 1 )
text = "Result 2"

[node name="Result3" type="Label" parent="."]
margin_left = 219.0
margin_top = 257.0
margin_right = 741.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 1 )
text = "Result 3"

[node name="Result4" type="Label" parent="."]
margin_left = 219.0
margin_top = 305.0
margin_right = 738.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 1 )
text = "Result 4"

[node name="Result5" type="Label" parent="."]
margin_left = 219.0
margin_top = 352.0
margin_right = 738.0
margin_bottom = 393.0
custom_fonts/font = SubResource( 1 )
text = "Result 5"

[node name="ExitButton" type="Button" parent="."]
margin_left = 219.0
margin_top = 478.0
margin_right = 369.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 109, 38 )
text = "Exit"

[node name="RestartButton" type="Button" parent="."]
margin_left = 585.0
margin_top = 478.0
margin_right = 735.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 109, 38 )
text = "Restart"

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
